[package]
name = "dots"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8.5"
bevy-inspector-egui = "0.9"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
